POngo hola mundo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
           </ng-template>
        </ion-popover>
 
-
+       <p>Hola mundo</p>
       </ion-content>
     </ion-menu>
     <ion-router-outlet id="main-content"></ion-router-outlet>
