Pongo hola mundo mundial

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,6 +33,7 @@
        </ion-popover>
 
        <p>Hola mundo</p>
+       <p>Hola mundo mundial</p>
       </ion-content>
     </ion-menu>
     <ion-router-outlet id="main-content"></ion-router-outlet>
