--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,6 +34,7 @@
 
        <p>Hola mundo</p>
        <p>Hola mundo mundial</p>
+       <p>Hola manolete</p>
       </ion-content>
     </ion-menu>
     <ion-router-outlet id="main-content"></ion-router-outlet>
